test/visibility/import/enablesUnqualified/multipleUnqualified/badName.good
badName.chpl:5: error: Bad identifier, no known 'baz' defined in 'Foo'
